unpackaged/main/default/objects/FPC_Schedule_B_Payments__c/FPC_Schedule_B_Payments__c.object-meta.xml
<CustomObject>
    <description>Detail equipment lines for lease documentation</description>
    <label>Schedule B Payments</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Schedule B Payments ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedule B Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>