unpackaged/main/default/objects/FPC_Schedule_B_Payments__c/fields/Commencement_Date__c.field-meta.xml
<CustomField>
    <fullName>Commencement_Date__c</fullName>
    <description>Commencement date of the agreement.</description>
    <inlineHelpText>Type in the commencement date of the agreement.</inlineHelpText>
    <label>Commencement Date</label>
    <type>DateTime</type>
</CustomField>