unpackaged/main/default/objects/FPC_Schedule_B_Payments__c/fields/Lease_Term__c.field-meta.xml
<CustomField>
    <fullName>Lease_Term__c</fullName>
    <description>Term of agreement</description>
    <inlineHelpText>Type in the term of the agreement.</inlineHelpText>
    <label>Lease Term</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>