unpackaged/main/default/objects/FPC_Schedule_B_Payments__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Schedule B Payments</relationshipLabel>
    <relationshipName>Schedule_B_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>