unpackaged/main/default/objects/FPC_Schedule_B_Payments__c/fields/Payment_01__c.field-meta.xml
<CustomField>
    <fullName>Payment_01__c</fullName>
    <description>Payment Month 1</description>
    <inlineHelpText>Type in the Payment for Month 1</inlineHelpText>
    <label>Payment 01</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>