unpackaged/main/default/objects/FPC_Schedule_B_Payments__c/fields/Payment_02__c.field-meta.xml
<CustomField>
    <fullName>Payment_02__c</fullName>
    <description>Payment Month 2</description>
    <inlineHelpText>Type in the Payment for Month 2</inlineHelpText>
    <label>Payment 02</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>