unpackaged/main/default/objects/FPC_Schedule_B_Payments__c/fields/Payment_05__c.field-meta.xml
<CustomField>
    <fullName>Payment_05__c</fullName>
    <description>Payment Month 5</description>
    <inlineHelpText>Type in the Payment for Month 5</inlineHelpText>
    <label>Payment 05</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>