unpackaged/main/default/objects/FPC_Schedule_B_Payments__c/fields/Regular_Payment__c.field-meta.xml
<CustomField>
    <fullName>Regular_Payment__c</fullName>
    <description>Regular Payment</description>
    <inlineHelpText>Type in the regular payment amount.</inlineHelpText>
    <label>Regular Payment</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>